src/objects/Portfolio_Company_Report__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Portfolio Company Reports</relationshipLabel>
        <relationshipName>Portfolio_Company_Reports</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EBITDA__c</fullName>
        <label>EBITDA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EBIT__c</fullName>
        <label>EBIT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_debt__c</fullName>
        <label>Net debt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_income__c</fullName>
        <label>Net income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales__c</fullName>
        <label>Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Significant_events__c</fullName>
        <label>Significant events</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Portfolio Company Report</label>
    <nameField>
        <label>Portfolio Company Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Portfolio Company Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>